--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ click==8.3.1
 colorama==0.4.6
 comm==0.2.3
 contourpy==1.3.2
-cryptography==46.0.3
+cryptography==47.0.7
 cycler==0.12.1
 DateTime==5.5
 debugpy==1.8.17
@@ -169,3 +169,5 @@ zope.proxy==7.0
 gunicorn==21.2.0
 waitress==2.1.2
 google-generativeai==0.3.0
+orjson==3.10.10
+tokenizers==0.15.2
