--- a/requirements.txt
+++ b/requirements.txt
@@ -112,7 +112,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-json-logger==4.0.0
 pytz==2025.2
-pywinpty==3.0.2
+#pywinpty==3.0.2
 PyYAML==6.0.3
 pyzmq==27.1.0
 realtime==2.25.0
