--- a/requirements.txt
+++ b/requirements.txt
@@ -103,8 +103,7 @@ propcache==0.4.1
 psutil==7.1.1
 pure_eval==0.2.3
 pycparser==2.23
-pydantic==2.11.7
-pydantic_core==2.16.3
+pydantic>=2.11.7,<3.0
 Pygments==2.19.2
 PyJWT==2.10.1
 pyparsing==3.2.5
@@ -144,7 +143,7 @@ tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
 typing-inspection==0.4.2
-typing_extensions==4.15.0
+typing_extensions>=4.12.2
 tzdata==2025.2
 uri-template==1.3.0
 urllib3==2.5.0
